[metadata]
name = namix
licence = Eclipse Public License 2.0 (EPL-2.0)
license_files = LICENSE
platforms = unix, linux, win32
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: OS Independent
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)

[options]
packages =
    namix
python_requires = >=3.8

[flake8]
max_line_length = 120
